--- a/rasp/Makefile
+++ b/rasp/Makefile
@@ -1,5 +1,5 @@
 CC = gcc
-LDFLAGS = -lpthread 
+LDFLAGS = -lpthread -lbcm2835
 BLDDIR = .
 INCDIR = $(BLDDIR)/inc
 SRCDIR = $(BLDDIR)/src
@@ -9,14 +9,14 @@ SRC = $(wildcard $(SRCDIR)/*.c)
 OBJ = $(patsubst $(SRCDIR)/%.c, $(OBJDIR)/%.o, $(SRC))
 EXE = bin/bin
 
-all: clean $(EXE) 
-    
+all: clean $(EXE)
+
 $(EXE): $(OBJ)
-    $(CC) $(OBJDIR)/*.o -o $@ $(LDFLAGS)
+	$(CC) $(OBJDIR)/*.o -o $@ $(LDFLAGS)
 
 $(OBJDIR)/%.o : $(SRCDIR)/%.c
-    @mkdir -p $(@D)
-    $(CC) $(CFLAGS) $< -o $@
+	@mkdir -p $(@D)
+	$(CC) $(CFLAGS) $< -o $@
 
 clean:
-    -rm -f $(OBJDIR)/*.o $(EXE)
+	-rm -f $(OBJDIR)/*.o $(EXE)
